--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta content="notranslate" name="google" />
     <meta content="IE=EmulateIE7" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta name="google-site-verification" content="esitlJCt__30yNdL-QUIQeALsZtat4vDzGU6rOORWJE" />
+    <link href='https://syahrulfajarcell.blogspot.com/favicon.ico' rel='icon' type='image/x-icon'/>
+<link href='https://syahrulfajarcell.blogspot.com/' rel='canonical'/>
     <style type="text/css">
     @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap');
 
@@ -209,22 +210,22 @@
         <div class="wrap">
             <h1>Syahrul Fajar イラワンサン</h1>
             hi, i am <b id="typed"></b><br /><br />
-            <small>Based in Bandung, Indonesia.</small>
+            <small>Based in Sidoarjo, Indonesia.</small>
         </div>
     </header>
     <footer>
         <nav>
             <ul>
                 <li>
-                    <a target="_blank" href="https://toko-wa.com">
+                    <a target="_blank" href="https://sfkios.com">
                         <i class="icon ion-ios-cart" style="color: #0EC244;"></i>
                         <span>
-                            https://<b>Toko-WA</b>.com
+                            https://<b>SFKIOS</b>.com
                         </span>
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" rel="nofollow" href="https://www.youtube.com/kangrian?sub_confirmation=1">
+                    <a target="_blank" rel="nofollow" href="#">
                         <i class="icon ion-logo-youtube"></i>
                         <span>
                             Subscribe
@@ -232,7 +233,7 @@
                     </a>
                 </li>
                 <li class="socmed">
-                    <a target="_blank" rel="nofollow" href="https://instagram.com/kangriaan/">
+                    <a target="_blank" rel="nofollow" href="#">
                         <i class="icon ion-logo-instagram"></i>
                         <span>
                             instagram.com/kangriaan
@@ -240,7 +241,7 @@
                     </a>
                 </li>
                 <li class="socmed">
-                    <a target="_blank" rel="nofollow" href="https://facebook.com/kangrian.net/">
+                    <a target="_blank" rel="nofollow" href="#">
                         <i class="icon ion-logo-facebook"></i>
                         <span>
                             facebook.com/kangrian.net
@@ -248,7 +249,7 @@
                     </a>
                 </li>
                 <li class="socmed">
-                    <a target="_blank" rel="nofollow" href="https://twitter.com/kangriaan/">
+                    <a target="_blank" rel="nofollow" href="#">
                         <i class="icon ion-logo-twitter"></i>
                         <span>
                             twitter.com/kangriaan
