--- a/index.html
+++ b/index.html
@@ -9,15 +9,8 @@
     <meta content="notranslate" name="google" />
     <meta content="IE=EmulateIE7" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <!-- IMG -->
-<link href='https://2.bp.blogspot.com/-2Q9zk0847zY/Xgl-czTa26I/AAAAAAAAAFA/aFtm2qOhJVcvHFcg-I-o0L1YoqaEt-SSQCLcBGAsYHQ/w600-h314-c/Share-SFKIOS.jpg' rel='image_src'/>
-<meta content='https://2.bp.blogspot.com/-2Q9zk0847zY/Xgl-czTa26I/AAAAAAAAAFA/aFtm2qOhJVcvHFcg-I-o0L1YoqaEt-SSQCLcBGAsYHQ/w600-h314-c/Share-SFKIOS.jpg' itemprop='image'/>
-<meta content='https://2.bp.blogspot.com/-2Q9zk0847zY/Xgl-czTa26I/AAAAAAAAAFA/aFtm2qOhJVcvHFcg-I-o0L1YoqaEt-SSQCLcBGAsYHQ/w600-h314-c/Share-SFKIOS.jpg' property='og:image'/>
-<meta content='600' property='og:image:width'/>
-<meta content='314' property='og:image:height'/>
-<meta content='https://2.bp.blogspot.com/-2Q9zk0847zY/Xgl-czTa26I/AAAAAAAAAFA/aFtm2qOhJVcvHFcg-I-o0L1YoqaEt-SSQCLcBGAsYHQ/w600-h314-c/Share-SFKIOS.jpg' name='twitter:image'/>
-<meta content='https://2.bp.blogspot.com/-2Q9zk0847zY/Xgl-czTa26I/AAAAAAAAAFA/aFtm2qOhJVcvHFcg-I-o0L1YoqaEt-SSQCLcBGAsYHQ/w600-h314-c/Share-SFKIOS.jpg' name='twitter:image:src'/>
-<link href='https://cdn.statically.io/favicons/www.sfkios.com' rel='icon' type='image/x-icon'/>
+    <link href='https://syahrulfajarcell.blogspot.com/favicon.ico' rel='icon' type='image/x-icon'/>
+    <link href='https://syahrulfajarcell.blogspot.com/' rel='canonical'/>
     <style type="text/css">
     @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap');
 
@@ -227,7 +220,7 @@
                     <a target="_blank" href="https://sfkios.com">
                         <i class="icon ion-ios-cart" style="color: #0EC244;"></i>
                         <span>
-                            https://<b>SFKIOS</b>.com
+                            https://<b>sfkios</b>.com
                         </span>
                     </a>
                 </li>
