--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Syahrul Fajar イラワンサン - Digital Creator</title>
+    <title>404 - Syahrul Fajar イラワンサン - Digital Creator</title>
     <meta content="index, follow" name="robots" />
     <meta content="index, follow" name="googlebot" />
     <meta content="notranslate" name="google" />
@@ -11,12 +11,7 @@
     <link href='https://syahrulfajarcell.blogspot.com/favicon.ico' rel='icon' type='image/x-icon'/>
     <link href='https://syahrulfajarcell.blogspot.com/' rel='canonical'/>
     <style type="text/css">
-    /*
-VIEW IN FULL SCREEN MODE
-FULL SCREEN MODE: http://salehriaz.com/404Page/404.html
-
-DRIBBBLE: https://dribbble.com/shots/4330167-404-Page-Lost-In-Space
-*/
+    
 
 @import url('https://fonts.googleapis.com/css?family=Dosis:300,400,500');
 
@@ -314,32 +309,26 @@ li a:hover {
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 
-<!--
-VIEW IN FULL SCREEN MODE
-FULL SCREEN MODE: http://salehriaz.com/404Page/404.html
-
-DRIBBBLE: https://dribbble.com/shots/4330167-404-Page-Lost-In-Space
--->
 
 <body class="bg-purple">
         
         <div class="stars">
             <div class="custom-navbar">
                 <div class="brand-logo">
-                    <img src="http://salehriaz.com/404Page/img/logo.svg" width="80px">
+                    <img src="https://1.bp.blogspot.com/-udCu4IryiLY/XlJM838uefI/AAAAAAAAC9o/vC6BBH37AFIsnxnyUXecQJlAQJNz2eeowCLcBGAsYHQ/s80/Icon%2B%2528512x512%2529.png" width="80px">
                 </div>
-                <div class="navbar-links">
+                <!--<div class="navbar-links">
                     <ul>
-                      <li><a href="http://salehriaz.com/404Page/404.html" target="_blank">Home</a></li>
-                      <li><a href="http://salehriaz.com/404Page/404.html" target="_blank">About</a></li>
-                      <li><a href="http://salehriaz.com/404Page/404.html" target="_blank">Features</a></li>
-                      <li><a href="http://salehriaz.com/404Page/404.html" class="btn-request" target="_blank">Request A Demo</a></li>
+                      <li><a href="/" target="_blank">Home</a></li>
+                      <li><a href="/" target="_blank">About</a></li>
+                      <li><a href="/" target="_blank">Features</a></li>
+                      <li><a href="/" class="btn-request" target="_blank">Request A Demo</a></li>
                     </ul>
-                </div>
+                </div>-->
             </div>
             <div class="central-body">
                 <img class="image-404" src="http://salehriaz.com/404Page/img/404.svg" width="300px">
-                <a href="http://salehriaz.com/404Page/404.html" class="btn-go-home" target="_blank">GO BACK HOME</a>
+                <a href="https://m.sfkios.com" class="btn-go-home" target="_blank">GO BACK HOME</a>
             </div>
             <div class="objects">
                 <img class="object_rocket" src="http://salehriaz.com/404Page/img/rocket.svg" width="40px">
