--- a/404.html
+++ b/404.html
@@ -314,9 +314,9 @@ li a:hover {
         
         <div class="stars">
             <div class="custom-navbar">
-                <div class="brand-logo">
+                <!--<div class="brand-logo">
                     <img src="https://1.bp.blogspot.com/-udCu4IryiLY/XlJM838uefI/AAAAAAAAC9o/vC6BBH37AFIsnxnyUXecQJlAQJNz2eeowCLcBGAsYHQ/s80/Icon%2B%2528512x512%2529.png" width="80px">
-                </div>
+                </div>-->
                 <!--<div class="navbar-links">
                     <ul>
                       <li><a href="/" target="_blank">Home</a></li>
@@ -327,7 +327,7 @@ li a:hover {
                 </div>-->
             </div>
             <div class="central-body">
-                <img class="image-404" src="http://salehriaz.com/404Page/img/404.svg" width="300px">
+                <h1 class="image-404" style="font-size:300px;font-weight:bold">404</h1>
                 <a href="https://m.sfkios.com" class="btn-go-home" target="_blank">GO BACK HOME</a>
             </div>
             <div class="objects">
