--- a/404.html
+++ b/404.html
@@ -327,7 +327,8 @@ li a:hover {
                 </div>-->
             </div>
             <div class="central-body">
-                <h1 class="image-404" style="font-size:300px;font-weight:bold">404</h1>
+                <h1 style="font-size:100px;font-weight:bold;width: 50%;
+  margin: 0 auto;color:#fff">404</h1>
                 <a href="https://m.sfkios.com" class="btn-go-home" target="_blank">GO BACK HOME</a>
             </div>
             <div class="objects">
