--- a/404.html
+++ b/404.html
@@ -130,8 +130,8 @@ p a.button:hover {
     </div>
 
     <div class="buttons">
-    	<p>You can search what you were looking for <a class="button" href="http://adhysuryadi.com/#modal1">here</a><br>
-                       Or you can go to <a class="button" href="http://adhysuryadi.com/">Homepage</a></p>
+    	<p>You can search what you were looking for <a class="button" href="/">here</a><br>
+                       Or you can go to <a class="button" href="/">Homepage</a></p>
     </div>
 </div>
 </body>
