--- a/404.html
+++ b/404.html
@@ -2,10 +2,7 @@
 <html>
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>404 - Syahrul Fajar イラワンサン - Digital Creator</title>
-    <meta content="index, follow" name="robots" />
-    <meta content="index, follow" name="googlebot" />
-    <meta content="notranslate" name="google" />
+    <title>404 - SFKIOS - Jagonya Produk Digital</title>
     <meta content="IE=EmulateIE7" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href='https://syahrulfajarcell.blogspot.com/favicon.ico' rel='icon' type='image/x-icon'/>
