--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Syahrul Fajar イラワンサン - Digital Creator</title>
+    <title>SFKIOS - Jagonya Produk Digital</title>
     <meta content="index, follow" name="robots" />
     <meta content="index, follow" name="googlebot" />
     <meta content="notranslate" name="google" />
@@ -208,8 +208,8 @@
 <body>
     <header>
         <div class="wrap">
-            <h1>Syahrul Fajar イラワンサン</h1>
-            hi, i am <b id="typed"></b><br /><br />
+            <h1>SFKIOS</h1>
+            Menjual <b id="typed"></b><br /><br />
             <small>Based in Sidoarjo, Indonesia.</small>
         </div>
     </header>
@@ -236,7 +236,7 @@
                     <a target="_blank" rel="nofollow" href="#">
                         <i class="icon ion-logo-instagram"></i>
                         <span>
-                            instagram.com/kangriaan
+                            instagram.com/sfkios
                         </span>
                     </a>
                 </li>
@@ -252,7 +252,7 @@
                     <a target="_blank" rel="nofollow" href="#">
                         <i class="icon ion-logo-twitter"></i>
                         <span>
-                            twitter.com/kangriaan
+                            twitter.com/sfkios
                         </span>
                     </a>
                 </li>
@@ -262,7 +262,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js"></script>
     <script type="text/javascript">
     $("#typed").typed({
-        strings: ["Web &amp; Graphic Designer", "Digital Creator", "Javanese People"],
+        strings: ["Pulsa &amp; Paket Data", "Token Listrik", "Top Up Game", "Berbagai Jasa Murah Dll"],
         typeSpeed: 30,
         startDelay: 0,
         backSpeed: 30,
