--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 <body>
     <header>
         <div class="wrap">
-            <h1>SFKIOS</h1>
-            Menjual <b id="typed"></b><br /><br />
+            <h1>SFKIOS a.k.a Syahrul Fajar Irawan</h1>
+            Sedia <b id="typed"></b><br /><br />
             <small>Based in Sidoarjo, Indonesia.</small>
         </div>
     </header>
@@ -262,7 +262,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js"></script>
     <script type="text/javascript">
     $("#typed").typed({
-        strings: ["Pulsa &amp; Paket Data", "Token Listrik", "Top Up Game", "Berbagai Jasa Murah Dll"],
+        strings: ["Pulsa", "Paket Data", "Voucher Data", "Token Listrik", "Top Up Game", "Berbagai Jasa Murah"],
         typeSpeed: 30,
         startDelay: 0,
         backSpeed: 30,
