--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 <body>
     <header>
         <div class="wrap">
-            <h1>SFKIOS a.k.a Syahrul Fajar Irawan</h1>
-            Sedia <b id="typed"></b><br /><br />
+            <h1>SFKIOS a.k.a Syahrul Fajar</h1>
+            Ready <b id="typed"></b><br /><br />
             <small>Based in Sidoarjo, Indonesia.</small>
         </div>
     </header>
