--- a/jasa/olshop/index.html
+++ b/jasa/olshop/index.html
@@ -133,12 +133,12 @@
     <link rel="preload" href="lib/ionicons/css/ionicons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="lib/mfp/mfp.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="lib/owl/assets/owl.carousel.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="lib/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="https://github.com/SyahrulFajarI/syahrulfajari.github.io/blob/master/jasa/lib/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta class="theme-color" content="#009688" name="apple-mobile-web-app-status-bar-style">
     <meta class="theme-color" content="#009688" name="msapplication-navbutton-color">
     <meta class="theme-color" content="#009688" name="theme-color">
-    <script type="text/javascript" src="lib/jquery.min.js"></script>
+    <script type="text/javascript" src="https://github.com/SyahrulFajarI/syahrulfajari.github.io/blob/master/jasa/lib/jquery.min.js"></script>
 </head>
 
 <body>
@@ -816,7 +816,7 @@
     </div>
     <script src="lib/owl/owl.carousel.min.js"></script>
     <script src="lib/mfp/mfp.js" defer="defer"></script>
-    <script type="text/javascript" src="lib/main.js"></script>
+    <script type="text/javascript" src="https://github.com/SyahrulFajarI/syahrulfajari.github.io/blob/master/jasa/lib/main.js"></script>
 </body>
 
 </html>
