--- a/jasa/aplikasiandroid/index.html
+++ b/jasa/aplikasiandroid/index.html
@@ -1719,7 +1719,7 @@ var input_blanter = document.getElementById('wa_email');
 /* Whatsapp Settings */ 
 var walink = 'https://web.whatsapp.com/send', 
     phone = '6285155392239', 
-    walink2 = 'Halo saya ingin ', 
+    walink2 = 'Halo min, saya ingin tanya tentang Aplikasi Android', 
     text_yes = 'Terkirim.', 
     text_no = 'Isi semua Formulir lalu klik Send.'; 
  
@@ -1740,12 +1740,12 @@ var input_select1 = $("#wa_select :selected").text(),
  
 /* Final Whatsapp URL */ 
 var blanter_whatsapp = walink + '?phone=' + phone + '&text=' + walink2 + '%0A%0A' + 
-    '*Name* : ' + input_name1 + '%0A' + 
+    '*Nama* : ' + input_name1 + '%0A' + 
     '*Email Address* : ' + input_email1 + '%0A' + 
-    '*Select Option* : ' + input_select1 + '%0A' + 
-    '*Input Number* : ' + input_number1 + '%0A' + 
-    '*URL/Link* : ' + input_url1 + '%0A' + 
-    '*Description* : ' + input_textarea1 + '%0A'; 
+    //'*Select Option* : ' + input_select1 + '%0A' + 
+    //'*Input Number* : ' + input_number1 + '%0A' + 
+    '*Dari* : ' + input_url1 + '%0A' + 
+    '*Pesan* : ' + input_textarea1 + '%0A'; 
  
 /* Whatsapp Window Open */ 
 window.open(blanter_whatsapp,'_blank'); 
