--- a/changelog.html
+++ b/changelog.html
@@ -26,6 +26,11 @@
         font-size: 14px;
         line-height: 1.4;
     }
+	    li {
+    font-size: 14px;
+    margin-left: 10px;
+    list-style-type: circle;
+ }
 .warnabiru{color:#1da1f2}
  .cok{vertical-align:-1px}
     </style>
