--- a/jasa/aplikasiandroid/index.html
+++ b/jasa/aplikasiandroid/index.html
@@ -6,7 +6,7 @@
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <!--Can't find substitution for tag [blog.ieCssRetrofitLinks]-->
 <meta content='/' property='og:url'/>
-<meta content='OLSHOP BY SFKIOS' property='og:title'/>
+<meta content='JASA APLIKASI SFKIOS' property='og:title'/>
 <meta content='app Landing lorem ipsum is simply dummy' property='og:description'/>
 <!--[if IE]> <script> (function() { var html5 = ("abbr,article,aside,audio,canvas,datalist,details," + "figure,footer,header,hgroup,mark,menu,meter,nav,output," + "progress,section,time,video").split(','); for (var i = 0; i < html5.length; i++) { document.createElement(html5[i]); } try { document.execCommand('BackgroundImageCache', false, true); } catch(e) {} })(); </script> <![endif]-->
 <meta content='#5c1d94' name='theme-color'/>
@@ -14,14 +14,14 @@
 <meta content='yes' name='apple-mobile-web-app-capable'/>
 <meta content='#5c1d94' name='apple-mobile-web-app-status-bar-style'/>
 <!-- Title -->
-<title>OLSHOP BY SFKIOS</title>
+<title>JASA APLIKASI SFKIOS</title>
 <!-- Meta keywords otomatis homepage, static page, dan post -->
-<meta content='OLSHOP BY SFKIOS' name='keywords'/>
+<meta content='JASA APLIKASI SFKIOS' name='keywords'/>
 <!-- Noindex search page, label, dan arsip -->
 <!-- Facebook Open Graph Tag -->
-<meta content='OLSHOP BY SFKIOS' property='og:title'/>
+<meta content='JASA APLIKASI SFKIOS' property='og:title'/>
 <meta content='website' property='og:type'/>
-<meta content='OLSHOP BY SFKIOS' property='og:site_name'/>
+<meta content='JASA APLIKASI SFKIOS' property='og:site_name'/>
 <style type="text/css">
 <!-- /*
 <style id='page-skin-1' type='text/css'><!--
@@ -41,7 +41,7 @@
 --></style>
 <style>
 /* =============================== 
-Theme Name: OLSHOP BY SFKIOS
+Theme Name: JASA APLIKASI SFKIOS
 Author: SFKIOS
 Design: https://wa.me/6285155392239
  =============================== */
@@ -1037,7 +1037,7 @@ color: #fff;
 <div class='header section' id='header'><div class='widget Header' data-version='1' id='Header1'>
 <div id='header-inner'>
 <a href='/' style='display: block'>
-<img alt="OLSHOP BY SFKIOS" id="Header1_headerimg" src="//2.bp.blogspot.com/-CfDnk_7_UWw/XMFMCUFl-DI/AAAAAAAAAOc/4OPAAl22B1Yu7-R7RkN9mFSeHG9hX4RwACK4BGAYYCw/s1600/logo%2540.png" style="display: block">
+<img alt="JASA APLIKASI SFKIOS" id="Header1_headerimg" src="//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png" style="display: block">
 </a>
 </div>
 </div></div>
@@ -1656,7 +1656,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 <div id='credit'>
 <div id='toTop'><i aria-hidden='true' class='fa fa-angle-up'></i></div>
 <div class='container'>
- &#169; Copyright 2019 <a class='site_name' href='/' title='OLSHOP BY SFKIOS'>OLSHOP BY SFKIOS</a> - Created by <a href='https://sfkios.com/' id='mycontent' title='goomsite'>SFKIOS</a></div>
+ &#169; Copyright 2019 <a class='site_name' href='/' title='JASA APLIKASI SFKIOS'>JASA APLIKASI SFKIOS</a> - Created by <a href='https://sfkios.com/' id='mycontent' title='goomsite'>SFKIOS</a></div>
 </div>
 <div class='pelajar' id='pelajar'></div>
 <div id='whatsapp'>
