--- a/jasa/aplikasiandroid/index.html
+++ b/jasa/aplikasiandroid/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <HTML class='v2' dir='ltr'>
 <head>
- <link href='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' rel='icon' type='image/x-icon'/>
-<link href='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' rel='icon' sizes='32x32'/>
-<link href='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' rel='icon' sizes='192x192'/>
-<link href='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' rel='apple-touch-icon' sizes='180x180'/>
-<meta content='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' name='msapplication-TileImage'/>
+ <link href='https://1.bp.blogspot.com/-udCu4IryiLY/XlJM838uefI/AAAAAAAAC9o/vC6BBH37AFIsnxnyUXecQJlAQJNz2eeowCLcBGAsYHQ/s1600/Icon%2B%2528512x512%2529.png' rel='icon' type='image/x-icon'/>
+<link href='https://1.bp.blogspot.com/-udCu4IryiLY/XlJM838uefI/AAAAAAAAC9o/vC6BBH37AFIsnxnyUXecQJlAQJNz2eeowCLcBGAsYHQ/s32/Icon%2B%2528512x512%2529.png' rel='icon' sizes='32x32'/>
+<link href='https://1.bp.blogspot.com/-udCu4IryiLY/XlJM838uefI/AAAAAAAAC9o/vC6BBH37AFIsnxnyUXecQJlAQJNz2eeowCLcBGAsYHQ/s192/Icon%2B%2528512x512%2529.png' rel='icon' sizes='192x192'/>
+<link href='https://1.bp.blogspot.com/-udCu4IryiLY/XlJM838uefI/AAAAAAAAC9o/vC6BBH37AFIsnxnyUXecQJlAQJNz2eeowCLcBGAsYHQ/s180/Icon%2B%2528512x512%2529.png' rel='apple-touch-icon' sizes='180x180'/>
+<meta content='https://1.bp.blogspot.com/-udCu4IryiLY/XlJM838uefI/AAAAAAAAC9o/vC6BBH37AFIsnxnyUXecQJlAQJNz2eeowCLcBGAsYHQ/s1600/Icon%2B%2528512x512%2529.png' name='msapplication-TileImage'/>
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <!--Can't find substitution for tag [blog.ieCssRetrofitLinks]-->
