--- a/jasa/aplikasiandroid/index.html
+++ b/jasa/aplikasiandroid/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <HTML class='v2' dir='ltr'>
 <head>
- <link href='https://1.bp.blogspot.com/-udCu4IryiLY/XlJM838uefI/AAAAAAAAC9o/vC6BBH37AFIsnxnyUXecQJlAQJNz2eeowCLcBGAsYHQ/s1600/Icon%2B%2528512x512%2529.png' rel='icon' type='image/x-icon'/>
-<link href='https://1.bp.blogspot.com/-udCu4IryiLY/XlJM838uefI/AAAAAAAAC9o/vC6BBH37AFIsnxnyUXecQJlAQJNz2eeowCLcBGAsYHQ/s32/Icon%2B%2528512x512%2529.png' rel='icon' sizes='32x32'/>
-<link href='https://1.bp.blogspot.com/-udCu4IryiLY/XlJM838uefI/AAAAAAAAC9o/vC6BBH37AFIsnxnyUXecQJlAQJNz2eeowCLcBGAsYHQ/s192/Icon%2B%2528512x512%2529.png' rel='icon' sizes='192x192'/>
-<link href='https://1.bp.blogspot.com/-udCu4IryiLY/XlJM838uefI/AAAAAAAAC9o/vC6BBH37AFIsnxnyUXecQJlAQJNz2eeowCLcBGAsYHQ/s180/Icon%2B%2528512x512%2529.png' rel='apple-touch-icon' sizes='180x180'/>
-<meta content='https://1.bp.blogspot.com/-udCu4IryiLY/XlJM838uefI/AAAAAAAAC9o/vC6BBH37AFIsnxnyUXecQJlAQJNz2eeowCLcBGAsYHQ/s1600/Icon%2B%2528512x512%2529.png' name='msapplication-TileImage'/>
+ <link href='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' rel='icon' type='image/x-icon'/>
+<link href='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' rel='icon' sizes='32x32'/>
+<link href='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' rel='icon' sizes='192x192'/>
+<link href='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' rel='apple-touch-icon' sizes='180x180'/>
+<meta content='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' name='msapplication-TileImage'/>
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <!--Can't find substitution for tag [blog.ieCssRetrofitLinks]-->
@@ -1362,19 +1362,34 @@ Android Studio, dengan source code +1jt ya kak :D, dapat update source code dan 
 </div>
 <div class='slider wow slideInUp'>
 <div class='item'>
-<img alt='' src='https://2.bp.blogspot.com/-c21tflfc7UI/XMFjA999fHI/AAAAAAAAAQQ/iYShaYcmkUUEE8l6ZJrhFRwgZ8kXu3U4QCLcBGAs/s1600/m1.png'/>
+<img alt='' src='/jasa/lib/WhatsApp Image 2020-03-20 at 20.53.00.jpeg'/>
 </div>
 <div class='item'>
-<img alt='' src='https://3.bp.blogspot.com/-4JW8PMLuG3s/XMFjAxEFIGI/AAAAAAAAAQU/ad32z2dOlvwwvAllyQTR1PLmVurSGM0DgCLcBGAs/s1600/m2.png'/>
+<img alt='' src='/jasa/lib/WhatsApp Image 2020-03-20 at 20.57.10 (8).jpeg'/>
 </div>
 <div class='item'>
-<img alt='' src='https://1.bp.blogspot.com/-3eJRL7xtsI8/XMFjAzWit6I/AAAAAAAAAQM/Pw6EDPFABqUebTYnDclVAhenXB28iN-1wCLcBGAs/s1600/m3.png'/>
+<img alt='' src='/jasa/lib/WhatsApp Image 2020-03-20 at 20.57.10 (7).jpeg'/>
 </div>
 <div class='item'>
-<img alt='' src='https://2.bp.blogspot.com/-KqJIx-eug_4/XMFjCHfv8bI/AAAAAAAAAQY/5xFIjoQueQ03jBOVmXTOCc4oZfsGQMhhACLcBGAs/s1600/m4.png'/>
+<img alt='' src='/jasa/lib/WhatsApp Image 2020-03-20 at 20.57.10 (6).jpeg'/>
 </div>
 <div class='item'>
-<img alt='' src='https://3.bp.blogspot.com/-cwDqtDgvbOw/XMFjCXEvUqI/AAAAAAAAAQc/3XAs1_OpI3YSwN1icEf438WpWbAvaqCMACLcBGAs/s1600/m5.png'/>
+<img alt='' src='/jasa/lib/WhatsApp Image 2020-03-20 at 20.57.10 (9).jpeg'/>
+</div>
+<div class='item'>
+<img alt='' src='/jasa/lib/WhatsApp Image 2020-03-20 at 20.57.10 (5).jpeg'/>
+</div>
+<div class='item'>
+<img alt='' src='/jasa/lib/WhatsApp Image 2020-03-20 at 20.57.10 (4).jpeg'/>
+</div>
+<div class='item'>
+<img alt='' src='/jasa/lib/WhatsApp Image 2020-03-20 at 20.57.10 (3).jpeg'/>
+</div>
+<div class='item'>
+<img alt='' src='/jasa/lib/WhatsApp Image 2020-03-20 at 20.57.10 (1).jpeg'/>
+</div>
+<div class='item'>
+<img alt='' src='/jasa/lib/WhatsApp Image 2020-03-20 at 21.23.34.jpeg'/>
 </div>
 </div>
 </div>
@@ -1626,7 +1641,7 @@ Sidoarjo, 61263, Indonesia.</li>
 </div>
 <div id='credit'>
 <div id='toTop'><i aria-hidden='true' class='fa fa-angle-up'></i></div>
-<div style="z-index:9999999" id="ytWidget"></div><script src="https://translate.yandex.net/website-widget/v1/widget.js?widgetId=ytWidget&pageLang=id&widgetTheme=light&autoMode=false" type="text/javascript"></script>
+<div id="ytWidget" style="z-index:9999999"></div><script src="https://translate.yandex.net/website-widget/v1/widget.js?widgetId=ytWidget&pageLang=id&widgetTheme=light&autoMode=true" type="text/javascript"></script>
 <div class='container'>
  &#169; Copyright 2019 <a class='site_name' href='/' title='JASA APLIKASI SFKIOS'>JASA APLIKASI SFKIOS</a></div>
 </div>
