--- a/jasa/aplikasiandroid/index.html
+++ b/jasa/aplikasiandroid/index.html
@@ -2,11 +2,7 @@
 <!DOCTYPE html>
 <HTML class='v2' dir='ltr'>
 <head>
- <link href='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' rel='icon' type='image/x-icon'/>
-<link href='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' rel='icon' sizes='32x32'/>
-<link href='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' rel='icon' sizes='192x192'/>
-<link href='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' rel='apple-touch-icon' sizes='180x180'/>
-<meta content='//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png' name='msapplication-TileImage'/>
+<link href='https://cdn.statically.io/favicons/www.sfkios.com' rel='icon' type='image/x-icon'/>
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <!--Can't find substitution for tag [blog.ieCssRetrofitLinks]-->
@@ -1302,7 +1298,7 @@ Bisa
 <div class='accordion-header js-accordion-header'>Buatnya pakai apa ini? Dapat source codenya juga gak?</div>
 <div class='accordion-body js-accordion-body'>
 <div class='accordion-body__contents'>
-Android Studio, dengan source code +1jt ya kak :D, dapat update source code dan support selamanya.
+Android Studio, dengan source code +750.000, dapat update source code dan support selamanya.
 </div>
 </div>
 </div>
@@ -1641,7 +1637,7 @@ Sidoarjo, 61263, Indonesia.</li>
 </div>
 <div id='credit'>
 <div id='toTop'><i aria-hidden='true' class='fa fa-angle-up'></i></div>
-<div id="ytWidget" style="z-index:9999999"></div><script src="https://translate.yandex.net/website-widget/v1/widget.js?widgetId=ytWidget&pageLang=id&widgetTheme=light&autoMode=true" type="text/javascript"></script>
+<div id="ytWidget" style="z-index:9999999;position: fixed;bottom: -15px;width: 100%;text-align: center;"></div><script src="https://translate.yandex.net/website-widget/v1/widget.js?widgetId=ytWidget&pageLang=id&widgetTheme=light&autoMode=true" type="text/javascript"></script>
 <div class='container'>
  &#169; Copyright 2019 <a class='site_name' href='/' title='JASA APLIKASI SFKIOS'>JASA APLIKASI SFKIOS</a></div>
 </div>
