--- a/jasa/aplikasiandroid/index.html
+++ b/jasa/aplikasiandroid/index.html
@@ -654,7 +654,7 @@ ul{list-style-type:none;padding:0;margin:0}
 .pricing_table .plan-cost{-webkit-border-radius:5%;-moz-border-radius:5%;border-radius:5%;text-align:center;line-height:90px;height:90px;margin:15px auto 0}
 .pricing_table .plan-price{font-weight:800;font-size:1.3em;color:#fff}
 .pricing_table .plan-type{opacity:.8;color:#fff;font-size:.7em}
-.pricing_table .plan-features{padding:0;margin:0;text-align:center;list-style:none;font-size:.8em}
+.pricing_table .plan-features{padding:0;margin:0;text-align:left;list-style:none;font-size:.8em}
 .pricing_table .plan-features li {
     padding: 10px 5%;
     font-size: 15px;
