--- a/jasa/aplikasiandroid/index.html
+++ b/jasa/aplikasiandroid/index.html
@@ -222,7 +222,7 @@ span.wa-x::before{position:absolute;top:50%;height:3px;width:50%;background:#fff
 .about-content p{
     margin-bottom: 20px;
 }
-@media screen and (max-width:768px){.wa-input.bagi{width:100%;margin:0 0 10px}
+@media screen and (max-width:768px){.wa-input.bagi{margin:0 0 10px}
 .wa-body{overflow-y:scroll;max-height:500px}
 .wa-input.full{width:100%;margin:0}}
 .box-list,.box1,.box10,.box11,.box12,.box2,.box3,.box4,.box5,.box6,.box7,.box8,.box9,.mfp-bg,.team-details,.team-img img{overflow:hidden}
@@ -1602,14 +1602,14 @@ Sidoarjo, 61263, Indonesia.</li>
 <input class='tujuan' type='hidden' value='085155392239'/>
 <div class='left'>
 <div class='form-whatsapp'>
-<label class='wa-label bagi'>Nama Anda</label>
-<input class='nama wa-input bagi' name='nama' placeholder='Name' type='text'/>
+<label class='wa-label bagi'>Nama</label>
+<input class='nama wa-input bagi' name='nama' placeholder='Nama Anda' type='text'/>
 </div>
 </div>
 <div class='right'>
 <div class='form-whatsapp'>
-<label class='wa-label bagi'>Nomor Hp Lainnya</label>
-<input aria-labelledby='number-00000014-acc number-00000014-error-acc number-00000014-instr-acc' class='hp wa-input bagi' data-role='i123-input' data-size='full' name='hp' placeholder='Your cellphone number' step='any' type='tel'/>
+<label class='wa-label bagi'>Nomor Hp</label>
+<input aria-labelledby='number-00000014-acc number-00000014-error-acc number-00000014-instr-acc' class='hp wa-input bagi' data-role='i123-input' data-size='full' name='hp' placeholder='Nomor Hp Lainnya' step='any' type='tel'/>
 </div>
 </div>
 <div class='form-whatsapp'>
@@ -1623,7 +1623,7 @@ Sidoarjo, 61263, Indonesia.</li>
 <div class='left'>
 <div class='form-whatsapp'>
 <label class='wa-label bagi'>Berapa Aplikasi? *Reseller/beli banyak ada harga khusus!</label>
-<input class='jumlah wa-input bagi' max='10' min='1' name='jumlah' placeholder='The amount of goods' type='number'/>
+<input class='jumlah wa-input bagi' max='10' min='1' name='jumlah' placeholder='Jumlah Pesanan' type='number'/>
 </div>
 </div>
 <div class='right'>
