--- a/jasa/aplikasiandroid/index.html
+++ b/jasa/aplikasiandroid/index.html
@@ -1037,12 +1037,12 @@ color: #fff;
 <div class='header-wrapper'>
 <div class='header section' id='header'><div class='widget Header' data-version='1' id='Header1'>
 <div id='header-inner'>
-<a href='/' style='display: block'>
+<a href='https://m.sfkios.com/jasa/aplikasiandroid' style='display: block'>
 <img alt="JASA APLIKASI SFKIOS" id="Header1_headerimg" src="//m.sfkios.com/jasa/aplikasiandroid/Iconw%20(512x512).png" style="display: block">
 </a>
 </div>
 </div></div>
-<a class='btn-wa' href='javascript:void(0)' onclick='openModal()'><i aria-hidden='true' class='fa fa-whatsapp'></i><span>Form WhatsApp</span></a>
+<a class='btn-wa' href='https://wa.me/6285155392239'><i aria-hidden='true' class='fa fa-whatsapp'></i><span>Form WhatsApp</span></a>
 <nav id='cssmenu'>
 <div id='head-mobile'></div>
 <div class='button' id='menu-button'>
@@ -1415,7 +1415,7 @@ Android Studio, dengan source code +750.000, dapat update source code dan suppor
 <li><i aria-hidden="true" class="fa fa-check"></i> 1 URL WebSite <br/> contoh1.com dibuka didalam aplikasi, web contoh2.com dst dilempar keluar ke browser</li>
 <li><i aria-hidden="true" class="fa fa-check"></i> 24/7 Bantuan</li>
 </ul>
-<div class='plan-select'><a href="javascript:void(0)" onclick="openModal()">Pesan Sekarang</a></div>
+<div class='plan-select'><a href="#contact">Pesan Sekarang</a></div>
 </div>
 <div class='plan wow fadeInUp animated' data-wow-delay='.4s' style='visibility:visible;animation-delay:.4s;animation-name:fadeInUp'>
 <header>
@@ -1444,7 +1444,7 @@ Android Studio, dengan source code +750.000, dapat update source code dan suppor
 <li><i aria-hidden="true" class="fa fa-check"></i> 3 URL WebSite <br/> contoh1.com-contoh3.com dibuka didalam aplikasi, web contoh4.com dst dilempar keluar ke browser (cocok buat yang punya banyak blog/web)</li>
 <li><i aria-hidden="true" class="fa fa-check"></i> 24/7 Bantuan</li>
 </ul>
-<div class='plan-select'><a href="javascript:void(0)" onclick="openModal()">Pesan Sekarang</a></div>
+<div class='plan-select'><a href="#contact">Pesan Sekarang</a></div>
 </div>
 <div class='plan featured wow fadeInUp animated' data-wow-delay='.8s' style='visibility:visible;animation-delay:.8s;animation-name:fadeInUp'>
 <header>
@@ -1473,7 +1473,7 @@ Android Studio, dengan source code +750.000, dapat update source code dan suppor
 <li><i aria-hidden="true" class="fa fa-check"></i> 5 URL WebSite <br/> contoh1.com-contoh5.com dibuka didalam aplikasi, web contoh6.com dst dilempar keluar ke browser (cocok buat yang punya banyak blog/web)</li>
 <li><i aria-hidden="true" class="fa fa-check"></i> 24/7 Bantuan</li>
 </ul>
-<div class='plan-select'><a href="javascript:void(0)" onclick="openModal()">Pesan Sekarang</a></div>
+<div class='plan-select'><a href="#contact">Pesan Sekarang</a></div>
 </div>
 <div class='plan wow fadeInUp animated' data-wow-delay='.6s' style='visibility:visible;animation-delay:.6s;animation-name:fadeInUp'>
 <header>
@@ -1485,7 +1485,7 @@ Android Studio, dengan source code +750.000, dapat update source code dan suppor
 <li>Update Selamanya</li>
 <li>Bantuan Khusus</li>
 </ul>
-<div class='plan-select'><a href="javascript:void(0)" onclick="openModal()">Pesan Sekarang</a></div>
+<div class='plan-select'><a href="#contact">Pesan Sekarang</a></div>
 </div>
 </div>
 </div>
