--- a/product/web-app/index.html
+++ b/product/web-app/index.html
@@ -626,7 +626,7 @@ ul{list-style-type:none;padding:0;margin:0}
 .slider{padding:0;margin:5rem auto;width:100%}
 .item.slick-slide{width:265px;margin:0 15px;height:443px!important;transition:-webkit-transform .4s;transition:transform .4s;transition:transform .4s,-webkit-transform .4s}
 .item.slick-slide img{width:100%;height:100%}
-.item.slick-slide.slick-center{-webkit-transform:scale(1);transform:scale(1);z-index:10;opacity:.9;box-shadow:0 3px 5px -1px rgba(0,0,0,.2),0 5px 8px 0 rgba(0,0,0,.14),0 1px 14px 0 rgba(0,0,0,.12);background:rgba(0,0,0,.8)}
+.item.slick-slide.slick-center{-webkit-transform:scale(1);transform:scale(1);z-index:10;box-shadow:0 3px 5px -1px rgba(0,0,0,.2),0 5px 8px 0 rgba(0,0,0,.14),0 1px 14px 0 rgba(0,0,0,.12);background:rgba(0,0,0,.8)}
 .slick-center:after{opacity:0}
 .slick-slider{display:block;box-sizing:border-box;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-touch-callout:none;-khtml-user-select:none;-ms-touch-action:pan-y;touch-action:pan-y}
 .slick-list{display:block;overflow:hidden;margin:0;padding:0}
