--- a/product/web-app/index.html
+++ b/product/web-app/index.html
@@ -651,7 +651,7 @@ ul{list-style-type:none;padding:0;margin:0}
 .pricing_table *{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:all .25s ease-out;transition:all .25s ease-out}
 .pricing_table header{color:#616161;font-weight:700;padding:20px}
 .pricing_table .plan-title{font-size:1.4em;font-weight:500;padding:10px 0;margin:0;text-transform:uppercase}
-.pricing_table .plan-cost{-webkit-border-radius:5%;-moz-border-radius:2%;border-radius:5%;text-align:center;line-height:90px;height:90px;margin:15px auto 0}
+.pricing_table .plan-cost{text-align:center;line-height:90px;height:90px;margin:15px auto 0}
 .pricing_table .plan-price{font-weight:800;font-size:1.3em;color:#fff}
 .pricing_table .plan-type{opacity:.8;color:#fff;font-size:.7em}
 .pricing_table .plan-features{padding:0;margin:0;text-align:left;list-style:none;font-size:.8em}
@@ -1117,7 +1117,7 @@ Kalau Anda menggunakan layanan konversi gratisan, biasanya akan ada logo pembuat
 <ul>
 <li><i aria-hidden='true' class='fa fa-check'></i> Desain Keren</li>
 <li><i aria-hidden='true' class='fa fa-check'></i> Source Code Terupdate</li>
-<li><i aria-hidden='true' class='fa fa-check'></i> Murah, Fitur Sangat Lengkap</li>
+<li><i aria-hidden='true' class='fa fa-check'></i> Murah, Fitur Lengkap!</li>
 </ul>
 <a href='#pricing'>Pesan Sekarang</a>
 </div>
@@ -1128,7 +1128,7 @@ Kalau Anda menggunakan layanan konversi gratisan, biasanya akan ada logo pembuat
 <div class='box2 wow' id='features'>
 <div class='section-heading text-center'>
 <h6>Fitur Aplikasi</h6>
-<h2>Fitur Sangat Lengkap</h2>
+<h2>Fitur Jos Gandos</h2>
 <p>Fitur dibawah ini adalah fitur update pertanggal 20 maret 2020, fitur akan terus bertambah!.</p>
 </div>
 <div class='container'>
