--- a/product/web-app/index.html
+++ b/product/web-app/index.html
@@ -1447,10 +1447,10 @@ Android Studio, dengan source code +750.000, dapat update source code dan suppor
 <li><i aria-hidden="true" class="fa fa-check"></i> Chrome TAB</li>
 <li><i aria-hidden="true" class="fa fa-check"></i> Buka Email, Telepon, SMS, WhatsApp</li>
 <li><i aria-hidden="true" class="fa fa-check"></i> Splash Screen</li>
-<li><i aria-hidden="true" class="fa fa-check"></i> 10 Menu Link<br/> lebih dari 10 dikenakan biaya lagi</li>
-<li><i aria-hidden="true" class="fa fa-check"></i> 5 URL WebSite <br/> lebih dari 5 dikenakan biaya lagi</li>
-<li><i aria-hidden="true" class="fa fa-check"></i> Semua fitur yang ada di demo, tidak termasuk desain halaman utama, tampilan no internet dan teks tidak bisa diganti</li>
+<li><i aria-hidden="true" class="fa fa-check"></i> 10 Drawer Menu Link<br/> lebih dari 10 dikenakan biaya lagi</li>
+<li><i aria-hidden="true" class="fa fa-check"></i> 3 Izin URL WebSite <br/> lebih dari 3 dikenakan biaya lagi</li>
 <li><i aria-hidden="true" class="fa fa-check"></i> 3 URL WebSite <br/> contoh1.com-contoh3.com dibuka didalam aplikasi, web contoh4.com dst dilempar keluar ke browser (cocok buat yang punya banyak blog/web)</li>
+<li><i aria-hidden="true" class="fa fa-check"></i> Semua fitur yang ada di demo, tidak termasuk desain halaman utama, tampilan no internet dan teks tidak bisa diganti</li>
 <li><i aria-hidden="true" class="fa fa-check"></i> 24/7 Bantuan</li>
 </ul>
 <div class='plan-select'><a href="#contact">Pesan Sekarang</a></div>
@@ -1476,10 +1476,10 @@ Android Studio, dengan source code +750.000, dapat update source code dan suppor
 <li><i aria-hidden="true" class="fa fa-check"></i> Chrome TAB</li>
 <li><i aria-hidden="true" class="fa fa-check"></i> Buka Email, Telepon, SMS, WhatsApp</li>
 <li><i aria-hidden="true" class="fa fa-check"></i> Splash Screen</li>
-<li><i aria-hidden="true" class="fa fa-check"></i> 15 Menu Link<br/> lebih dari 15 dikenakan biaya lagi</li>
-<li>10 URL WebSite <br/> lebih dari 10 dikenakan biaya lagi</li>
-<li><i aria-hidden="true" class="fa fa-check"></i> Semua fitur yang ada di demo, termasuk desain utama, desain aplikasi, gambar icon/teks dapat diganti sesuai selera</li>
+<li><i aria-hidden="true" class="fa fa-check"></i> 15 Drawer Menu Link<br/> lebih dari 15 dikenakan biaya lagi</li>
+<li><i aria-hidden="true" class="fa fa-check"></i> 5 Izin URL WebSite <br/> lebih dari 5 dikenakan biaya lagi</li>
 <li><i aria-hidden="true" class="fa fa-check"></i> 5 URL WebSite <br/> contoh1.com-contoh5.com dibuka didalam aplikasi, web contoh6.com dst dilempar keluar ke browser (cocok buat yang punya banyak blog/web)</li>
+<li><i aria-hidden="true" class="fa fa-check"></i> Semua fitur yang ada di demo, termasuk desain utama, desain aplikasi, gambar icon/teks dapat diganti sesuai selera</li>
 <li><i aria-hidden="true" class="fa fa-check"></i> 24/7 Bantuan</li>
 </ul>
 <div class='plan-select'><a href="#contact">Pesan Sekarang</a></div>
