--- a/product/web-app/index.html
+++ b/product/web-app/index.html
@@ -1057,6 +1057,7 @@ color: #fff;
 <li><a href='#pricing'>Paket</a></li>
 <li><a href='#testimonial'>Testimoni</a></li>
 <li><a href='#contact'>Kontak Pemesanan</a></li>
+<li><a href='https://p-store.net/software/43333/jasa-pembuatan-aplikasi-webview-fitur-lengkap?ref=profile'>Beli Melalui P-Store.Net</a></li>
 <li><a href='#'>Lainnya</a>
 <ul>
 <li><a href='//sfkios.com'>SFKIOS</a></li>
