--- a/service/web-app/index.html
+++ b/service/web-app/index.html
@@ -1135,37 +1135,46 @@ Kalau Anda menggunakan layanan konversi gratisan, biasanya akan ada logo pembuat
 <div class='container'>
 <div class='box-list'>
 <li>
-<i aria-hidden='true' class='fa fa-code'></i>
-<h3>Kode Bersih</h3>
-Tidak ada script hantu yang saya sisipkan</li>
+<i aria-hidden='true' class='fa fa-picture-o'></i>
+<h3>Tampilan Keren</h3>
+2 Tema Kekinian Dengan Style Material UI dan Flat, Menu Drawer dan Full Screen</li>
 <li>
-<i aria-hidden='true' class='fa fa-pie-chart'></i>
+<i aria-hidden='true' class='fa fa-paint-brush'></i>
 <h3>Warna Tidak Terbatas</h3>
-Ganti warna sesuai selera anda!</li>
+Ganti warna header, splashscreen, drawer, alert dll sesuai selera anda!</li>
 <li>
-<i aria-hidden='true' class='fa fa-rocket '></i>
-<h3>Aplikasi Ringan & Cepat</h3>
-Ukuran kurang dari -10 MB, untuk membukanya hanya butuh waktu kurang dari 10 detik!</li>
+<i aria-hidden='true' class='fa fa-bar-chart'></i>
+<h3>Firebase Analytics</h3>
+Pantau pengguna dan perkembangan pada aplikasi anda melalui firebase console</li>
 <li>
-<i aria-hidden='true' class='fa fa-mobile'></i>
-<h3>Desain Keren</h3>
-Desain kekinian menggunkan material design style!</li>
+<i aria-hidden='true' class='fa fa-external-link'></i>
+<h3>Scheme Aplikasi</h3>
+Aplikasi sudah mendukung untuk membuka WhatsApp, Gmail, SMS, dan Telepon Dsb!</li>
 <li>
-<i aria-hidden='true' class='fa fa-tasks'></i>
-<h3>Upload & Download</h3>
-Mendukung Upload dan Download File</li>
+<i aria-hidden='true' class='fa fa-upload'></i>
+<h3>Upload</h3>
+Aplikasi sudah mendukung upload file, bisa upload berbagai file sekaligus!</li>
+<li>
+<li>
+<i aria-hidden='true' class='fa fa-download'></i>
+<h3>Download</h3>
+Aplikasi sudah mendukung download file, download berbagai macam file langsung melalui aplikasi anda, tanpa harus keluar ke browser bawaan!</li>
 <li>
 <i aria-hidden='true' class='fa fa-bell'></i>
-<h3>Notifikasi</h3>
-Kirim notifikasi ke pengguna aplikasi anda</li>
+<h3>Firebase Cloud Messaging</h3>
+Kirim notifikasi ke pengguna aplikasi anda, untuk update, berita, pengumuman dsb!</li>
+<li>
+<i aria-hidden='true' class='fa fa-file-image-o'></i>
+<h3>Firebase In-App Messaging</h3>
+Kirim pop up pesan ke pengguna aplikasi anda, untuk update, berita, pengumuman dsb!</li>
 <li>
 <i aria-hidden='true' class='fa fa-chrome'></i>
 <h3>Chrome TAB</h3>
 Buka URL Eksternal atau URL yang tidak diinginkan menggunakan chrome tab</li>
 <li>
-<i aria-hidden='true' class='fa fa-mobile'></i>
-<h3>Pesan dalam Aplikasi</h3>
-Kirim pesan dan gambar ke dalam aplikasi anda</li>
+<i aria-hidden='true' class='fa fa-share-alt'></i>
+<h3>Bagikan Aplikasi</h3>
+Tombol berbagi aplikasi</li>
 <li>
 <i aria-hidden='true' class='fa fa-arrow-right'></i>
 <h3>Fitur Lainnya</h3>
