--- a/service/web-app/index.html
+++ b/service/web-app/index.html
@@ -1147,7 +1147,7 @@ Ganti warna header, splashscreen, drawer, alert dll sesuai selera anda!</li>
 <h3>Firebase Analytics</h3>
 Pantau pengguna dan perkembangan pada aplikasi anda melalui firebase console</li>
 <li>
-<i aria-hidden='true' class='fa fa-external-link'></i>
+<i aria-hidden='true' class='fa fa-close'></i>
 <h3>Scheme Aplikasi</h3>
 Aplikasi sudah mendukung untuk membuka WhatsApp, Gmail, SMS, dan Telepon Dsb!</li>
 <li>
