--- a/service/web-app/index.html
+++ b/service/web-app/index.html
@@ -1032,6 +1032,32 @@ color: #fff;
 .datainput{color: #fff;background:none;position:relative;margin:5px 0 20px}.datainput p{color: #fff;background:none;font-size:12px;display:inline-block;padding:5px 15px;border-radius:.5rem}.whatsapp-form textarea{color: #fff;background:none;min-height:120px}.datainput select{background:none;padding:12px 0;color:#333;font-size:14px;width:100%;border:0;border-bottom:1px solid #fff;outline:none;}.datainput input,.datainput textarea{color: #fff;background:none;font-size:15px;padding:15px 0;display:block;width:100%;border:none;border-bottom:1px solid #fff}.datainput input:focus,.datainput textarea:focus{color: #fff;background:none;outline:none}.datainput label{background:none;color:#fff;font-size:14px;font-weight:400;position:absolute;pointer-events:none;left:0;top:18px;transition:.2s ease all}.datainput input:focus~label,.datainput input:valid~label,.datainput textarea:focus~label,.datainput textarea:valid~label{background:none;top:-10px;font-size:14px;color:#fff}#notif-license span{font-size:40px}#notif-license{display:none;position:fixed}.bar{position:relative;display:block;width:100%}.bar:before,.bar:after{content:'';height:2px;width:0;bottom:1px;position:absolute;transition:.2s ease all}.bar:before{left:50%}.bar:after{right:50%}.datainput input:focus~.bar:before,.datainput input:focus~.bar:after,.datainput textarea:focus~.bar:before,.datainput textarea:focus~.bar:after{width:50%}.indigox{background:#3f51b5}.orangex{background:#ff9800}.pinkx{background:#e91e63}.bluex{background:#2196F3}.purplex{background:#9c27b0}.redx{background:#F44336}.greenx{background:#4CAF50}.highlight{position:absolute;height:50%;width:100px;top:25%;left:0;pointer-events:none;opacity:.5}.datainput input:focus~.highlight,.datainput textarea:focus~.highlight{animation:inputHighlighter .3s ease}.datainput input:focus~label,.datainput input:valid~label,.datainput textarea:focus~label,.datainput textarea:valid~label{top:-10px;font-size:13px;color:#fff}
 </style>
 <div id="ytWidget" style="z-index:9999999;position: fixed;bottom: -15px;width: 100%;text-align: center;"></div><script src="https://translate.yandex.net/website-widget/v1/widget.js?widgetId=ytWidget&pageLang=id&widgetTheme=light&autoMode=true" type="text/javascript"></script>
+<b:if cond='data:blog.isMobileRequest == "true"'>
+<style type='text/css'>
+/*<![CDATA[*/
+html:after {
+  content: "";
+  background: #fff url(https://2.bp.blogspot.com/-7xbzasXFR50/Wa43L1IIFAI/AAAAAAAAskE/JKR51NgBl_EIuoZJylbY3QqhQv03tR2LwCLcBGAs/s1600/maintainance.jpg) no-repeat;
+  background-size: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100000;
+  background-position: center;
+}
+body {
+  display:none;
+}
+@media screen and (max-width:800px) {
+  html:after {
+    background-size: contain;
+  }
+}
+/*]]>*/
+</style>
+</b:if>
 </head>
 <body itemscope='itemscope' itemtype='http://schema.org/WebPage'>
 <header class='header-wrap'>
@@ -1147,7 +1173,7 @@ Ganti warna header, splashscreen, drawer, alert dll sesuai selera anda!</li>
 <h3>Firebase Analytics</h3>
 Pantau pengguna dan perkembangan pada aplikasi anda melalui firebase console</li>
 <li>
-<i aria-hidden='true' class='fa fa-close'></i>
+<i aria-hidden='true' class='fa fa-external-link'></i>
 <h3>Scheme Aplikasi</h3>
 Aplikasi sudah mendukung untuk membuka WhatsApp, Gmail, SMS, dan Telepon Dsb!</li>
 <li>
